# spot-vegetation-navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.yml  setup.py
launch/: bringup.launch  dwa_costmap.launch  maps.launch
multiview_costmap/: costmap_common_high.yaml  costmap_common_low.yaml  costmap_common_mid.yaml  costmap_local.yaml  multiview_costmap.launch  multiview_scan.launch
scripts/: costmap_subscriber.py  dwa_costmap.py  dwa_costmap_v2.py  dwa_costmap_v3.py  img_subscriber.py  inference.py  multiview_costmap_subscriber.py  quadrant_splitter.py  save_dataset_images.py  train_test_split.py
scripts/dataset_preparation/: quadrant_splitter.py  save_dataset_images.py  save_dataset_images_v2.py  train_test_split.py
scripts/experiments/: multiview_costmap_subscriber.py
siamese_network/: inference_v1.py  inference_v2.py  make_pairs_veg_classifier.py  ros_test_veg_classifier.py  test_siamese_network.py  train_siamese_network.py  train_veg_classifier.py  train_veg_classifier_v2.py
siamese_network/aug_demo_models/1_175_iters/: saved_model.pb
siamese_network/aug_demo_models/2_190_iters_w_equalization/: saved_model.pb
siamese_network/aug_demo_models/3_110_iters/: saved_model.pb
siamese_network/aug_demo_models/4_80_iters_w_equalization/: saved_model.pb
siamese_network/aug_demo_models/5_100_iters_split_dataset/: saved_model.pb
siamese_network/aug_demo_models/60_iters_w_equalization/: saved_model.pb
siamese_network/pyimagesearch/: config.py  config2.py  experiment.py  mobilenetv3.py  transformer.py  utils.py  utils2.py  utils3.py
(+19 files in other folders)
